--- a/about.html
+++ b/about.html
@@ -58,21 +58,21 @@
     <div class="header header-nav fixed-top">
         <div class="container">
             <nav class = "navbar navbar-expand-lg px-0 py-4">
-                <a class = "navbar-brand" href = "https://quickgrab.io"><img src="./images/logo.png" alt="QuickGrab" class="navbar-logo"></a>
+                <a class = "navbar-brand" href = "index.html"><img src="./images/logo.png" alt="QuickGrab" class="navbar-logo"></a>
                 <button class = "navbar-toggler navbar-toggler-right" type = "button" data-toggle = "collapse" 
                     data-target = "#navbarNavDropdown" aria-controls = "navbarNavDropdown" 
                     aria-expanded = "false" aria-label = "Toggle navigation">
                        
                     <span class="navbar-toggler-icon"><i class="fas fa-bars fa-2x" style="color: #fff;"></i></span>
                 </button>
-                <div class = "collapse navbar-collapse" id = "navbarNavDropdown">
-                    <ul class = "navbar-nav ml-5">
+                <div class = "collapse navbar-collapse justify-content-end" id = "navbarNavDropdown">
+                    <ul class = "navbar-nav">
                         <li class = "nav-item"><a class = "nav-link" href = "#" data-toggle="modal" data-target="#couponModal">GrabCard</a></li>
                         <li class = "nav-item"><a class = "nav-link text-center-sm" href = "marketplace.html">marketplace</a></li>
                         <li class = "nav-item"><a class = "nav-link" href = "earn.html">Earn Travelling</a></li>
                         <li class = "nav-item"><a class = "nav-link" href = "#" data-toggle="modal" data-target="#registerModal">Register</a></li>
                         <li class = "nav-item"><a class = "nav-link" href = "#" data-toggle="modal" data-target="#loginModal">Sign In</a></li>
-                        <li class = "nav-item"><a class = "nav-link btn-primary" href = "#">Create Order</a></li>
+                        <li class = "nav-item p-0"><a class = "nav-link btn" href = "#">Create Order</a></li>
                     </ul>  
                 </div>
             </nav>
@@ -99,7 +99,7 @@
                 <div class="col-md-6">
                     <div class="store-title">
                         <h2>Most Popular stores</h2>
-                        <p>People in your city love getting products from these websites with Grabr. Go to any website, find your product and paste the URL of the product you want to request delivery</p>
+                        <p class="display-3 justify-content">Go to any website, find your product and paste the URL of the product you want to request delivery</p>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                     <div class="card">
                         <img class="card-img-top" src="./images/644b4dda98a23e67.jpg" alt="Amazon">
                         <div class="card-body">
-                          <a href="https://www.amazon.com"><img src="./images/1ee849ec670108f5.svg" class="w-50"></a>
+                          <!---- <a href="https://www.amazon.com"><img src="./images/1ee849ec670108f5.svg" class="w-50"></a> --->
                         </div>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                     <div class="card" style="width: 100%;">
                         <img class="card-img-top" src="./images/4c6858b2ecfc1f08.jpg" alt="Ebay">
                         <div class="card-body">
-                          <a href="hhtps://www.ebay.com"><img src="./images/c4f7b7dd4ae603a3.svg" class="w-50"></a>
+                          <!---- <a href="hhtps://www.ebay.com"><img src="./images/c4f7b7dd4ae603a3.svg" class="w-50"></a> -->
                         </div>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                     <div class="card" style="width: 100%;">
                         <img class="card-img-top" src="./images/5c16ea0cdc891f87.jpg" alt="Walmart">
                         <div class="card-body">
-                          <a href="#"><img src="./images/f0eb07a521bc8a84.svg" class="w-50"></a>
+                          <!--- <a href="#"><img src="./images/f0eb07a521bc8a84.svg" class="w-50"></a> ---->
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                     <div class="card" style="width: 100%;">
                         <img class="card-img-top" src="./images/8ae484ad55ef7125.jpg" alt="Card image cap">
                         <div class="card-body">
-                          <a href="#"><img src="./images/79af4f2907a20628.svg" class="w-50"></a>
+                          <!----- <a href="#"><img src="./images/79af4f2907a20628.svg" class="w-50"></a> ---->
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                     <div class="card" style="width: 100%;">
                         <img class="card-img-top" src="./images/644b4dda98a23e67.jpg" alt="Card image cap">
                         <div class="card-body">
-                          <a href="#"><img src="./images/1ee849ec670108f5.svg" class="w-50"></a>
+                          <!------ <a href="#"><img src="./images/1ee849ec670108f5.svg" class="w-50"></a> ----->
                         </div>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     <div class="card" style="width: 100%;">
                         <img class="card-img-top" src="./images/4c6858b2ecfc1f08.jpg" alt="Card image cap">
                         <div class="card-body">
-                          <a href="#"><img src="./images/c4f7b7dd4ae603a3.svg" class="w-50"></a>
+                          <!----- <a href="#"><img src="./images/c4f7b7dd4ae603a3.svg" class="w-50"></a> ---->
                         </div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                     <div class="card" style="width: 100%;">
                         <img class="card-img-top" src="./images/5c16ea0cdc891f87.jpg" alt="Card image cap">
                         <div class="card-body">
-                          <a href="#"><img src="./images/f0eb07a521bc8a84.svg" class="w-50"></a>
+                          <!------ <a href="#"><img src="./images/f0eb07a521bc8a84.svg" class="w-50"></a> ----->
                         </div>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                     <div class="card" style="width: 100%;">
                         <img class="card-img-top" src="./images/8ae484ad55ef7125.jpg" alt="Card image cap">
                         <div class="card-body">
-                          <a href="#"><img src="./images/79af4f2907a20628.svg"></a>
+                          <!----- <a href="#"><img src="./images/79af4f2907a20628.svg"></a> ---->
                         </div>
                     </div>
                 </div>
@@ -179,8 +179,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mx-auto">
-                    <h1 class="text-center mt-5">Founders</h1>
-                    <p class="text-center">At QuickGrab, our vision is to break down borders so that everyone can enjoy their favorite products, no matter what city they call home.</p>
+                    <h2 class="text-center mt-5">Meet the team</h2>
+                    <h1 class="text-center mb-5">We The Founders</h1>
                     <div class="row">
                         <div class="col-md-4 col-sm-6 col-xs-12">
                             <article class="material-card Red">
