--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 </button>
                 <div class = "collapse navbar-collapse justify-content-end" id = "navbarNavDropdown">
                     <ul class = "navbar-nav">
-                        <li class = "nav-item"><a class = "nav-link" href = "#" data-toggle="modal" data-target="#couponModal">GrabCard</a></li>
+                        <li class = "nav-item"><a class = "nav-link active" href = "#" data-toggle="modal" data-target="#couponModal">GrabCard</a></li>
                         <li class = "nav-item"><a class = "nav-link text-center-sm" href = "marketplace.html">marketplace</a></li>
                         <li class = "nav-item"><a class = "nav-link" href = "earn.html">Earn Travelling</a></li>
                         <li class = "nav-item"><a class = "nav-link" href = "#" data-toggle="modal" data-target="#registerModal">Register</a></li>
